[package]
name = "cachedb"
version = "0.8.1"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2021"
description = "In memory Key/Value store that stores RwLock<Value> which expire in LRU order when unused"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/cachedb.git"
keywords = ["collection", "cache", "concurrency"]

[dependencies]
parking_method = "0.4.0"
log = "0.4"
intrusive-collections = "0.9"

[dev-dependencies]
rand = "0.8.4"
env_logger = "0.9"
libc = "0.2.122"

[features]
default = ["logging"]
logging = []

[badges]
maintenance = { status = "actively-developed" }
